# intelligent_traffic_monitoring_system

./: .gitignore  README.md  main.py  overview_architecture.mermaid  predict.py  predict2.py  producer_images.py  pyproject.toml  spark_vehicle_counting.py  test.ipynb  test.py
config/: cameras.yaml
forecast_traffic_volume/: README.md  model_evaluation.txt  train.py
forecast_traffic_volume/dataset/: preprocess.py  traffic_data.csv
forecast_traffic_volume/traffic_gbt_model/metadata/: .part-00000-6ee97e66-1946-49d2-a3f2-0ffb819f969b-c000.txt.crc  part-00000-6ee97e66-1946-49d2-a3f2-0ffb819f969b-c000.txt
forecast_traffic_volume/traffic_gbt_model/stages/0_VectorAssembler_1b3702a9f132/metadata/: .part-00000-ad33a514-193f-4060-9672-41067f35c00f-c000.txt.crc  part-00000-ad33a514-193f-4060-9672-41067f35c00f-c000.txt
forecast_traffic_volume/traffic_gbt_model/stages/1_GBTRegressor_3be9eb559092/data/: .part-00000-8eff3a47-fa75-4cce-a265-5ad4e497660f-c000.snappy.parquet.crc  part-00000-8eff3a47-fa75-4cce-a265-5ad4e497660f-c000.snappy.parquet
forecast_traffic_volume/traffic_gbt_model/stages/1_GBTRegressor_3be9eb559092/metadata/: .part-00000-c04d623a-6b14-43b9-974f-e80cc23a7688-c000.txt.crc  part-00000-c04d623a-6b14-43b9-974f-e80cc23a7688-c000.txt
forecast_traffic_volume/traffic_gbt_model/stages/1_GBTRegressor_3be9eb559092/treesMetadata/: .part-00000-fc3a4f5e-75e6-4fbb-9d71-96e83a2a6b88-c000.snappy.parquet.crc  part-00000-fc3a4f5e-75e6-4fbb-9d71-96e83a2a6b88-c000.snappy.parquet
images/: 1.mermaid  2.mermaid  3.mermaid  architechture.mermaid
kafka/: dev_producer_images.py  dockerfile  producer.py  setup_kafka.sh
spark/: README.md  forcast_traffic.py  remove_all_checkpoint.sh  spark_vehicle_counting.py  test2.py  traffic_aggregated.py  traffic_forecast.py  traffic_monitor.py  traffic_monitor_v2.py
web/: index.html  main.py
